themes/slender-custom/static/css/slender-base.css
/******************************************************************************
 *
 * slender-base.css
 * Slender theme for Hugo by CrimsonRay
 * https://github.com/CrimsonRay/slender
 *
 *****************************************************************************/

@import url(https://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans);

body {
    font-family: "Open Sans", Helvetica, sans-serif;
    height: 100%;
    margin: 0;
}

/* Container */

.container {
    min-height: calc(100vh - 68px);
}

.container:after {
    content: "";
    display: block;
    height: 68px;
}

/* Navigation */

nav ul {
    text-align: center;
    padding: 0px;
    margin-top: 0;
}

nav ul li {
    list-style-type: none;
    display: inline-block;
    margin-top: 32px;
    padding-left: 12px;
    padding-right: 12px;
}

/* Header */

header {
    padding-bottom: 1em;
}

h1.brand {
    font-family: "Fjalla One", Helvetica, sans-serif;
    font-size: 68px;
    text-transform: uppercase;
    letter-spacing: 6px;
    text-align: center;
}

h1.title {
    font-family: "Fjalla One", Helvetica, sans-serif;
    font-size: 48px;
    text-transform: uppercase;
    letter-spacing: 3px;
    text-align: center;
    margin-top: 112px;
}

header p {
    opacity: 0.8;
    font-size: 22px;
    text-align: center;
    margin-top: 30px;
}

header p a .fa {
    font-size: 34px;
    padding-right: 10px;
}

/* Pagination */

.pagination {
    margin-top: 30px;
    padding: 0 0 0 0;
}

.pagination li {
    list-style-type: none;
    display: inline-block;
    text-align: center;
    opacity: 0.7;
}

.pagination li.active {
    opacity: 1.0;
}

.pagination li.disabled {
    pointer-events: none;
    opacity: 0.4;
}

/* Images */

figure figcaption {
    margin-top: -40px;
    text-align: center;
}

figure figcaption h4 {
    font-weight: lighter;
}

figure figcaption p {
    margin-top: -20px;
    font-size: 12px;
}

img {
    max-width: 100%;
    height: auto;
}

/* Articles */

#article-listing,
.article-content {
    margin: 88px auto;
    max-width: 768px;
}

article {
    margin-top: 28px;
}

.article-title {
    font-size: 28px;
    line-height: 38px;
}

.article-title a {
    color: #000 !important;
    text-decoration: none;
}

.article-info {
    color: #7e7e7e;
    font-size: 14px;
    margin-top: -20px;
}

.article-summary {
    margin-top: 22px;
    font-size: 18px;
    text-align: justify;
}

.article-read-more {
    margin-top: 8px;
}

.article-content {
    font-size: 18px;
    font-family: Helvetica, sans-serif;
    line-height: 28px;
}

.article-content * a {
    color: #000 !important;
}

/* Footer */

footer {
    height: 68px;
}

footer p {
    text-align: center;
    padding-top: 24px;
}

/* Smaller screen sizes */

@media (max-width: 768px) {
    header h1 {
        font-size: 48px;
    }
    #article-listing {
        margin: 20px;
    }
    .article-content {
        margin: 20px;
    }
}

